# minicrew

./: .env.example  .gitignore  CLAUDE.md  INTEGRATE.md  LICENSE  README.md  SECURITY.md  SETUP.md  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  teardown.sh
.github/: domain-scrub-primary.txt  domain-scrub-secondary.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: minicrew-mac-mini.md
ci/: domain-scrub-gitlog.txt  domain-scrub-primary.txt  domain-scrub-secondary.txt
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIG-REFERENCE.md  DISPATCH.md  GETTING-STARTED.md  GITHUB-APP.md  HANDOFF.md  LINUX.md  LOGGING.md  MODEL-TUNING.md  ORCHESTRATION.md  PROMPTS.md  QUEUEING.md  SKILLS-INTEGRATION.md  SUBAGENT-INTEGRATION.md  SUPABASE-SCHEMA.md  TROUBLESHOOTING.md
examples/fan-out/: README.md  config.yaml
examples/minimal/: README.md  config.yaml
schema/: config.schema.json  payload.schema.example.json  template.sql
schema/migrations/: 002_remote_subagent.sql  003_handoff.sql  004_bundle_fetch_rpc.sql
scripts/: linux_smoke.sh
skills/: add-job-type.md  add-machine.md  add-worker.md  dispatch.md  fanout.md  routing-rules.md  scaffold-project.md  setup.md  status.md  teardown.md  tune.md
tests/: render_examples.py  smoke.py  validate_schema_negatives.py
tests/schema_negatives/: bad_mode.yaml  bad_schema_version.yaml  missing_job_types.yaml  unknown_top_key.yaml  v2_sink.yaml
worker/: __init__.py  __main__.py  cli.py
worker/builtin_prompts/: ad_hoc.md.j2  handoff.md.j2
(+51 files in other folders)
