[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minicrew"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.package-data]
"worker.builtin_prompts" = ["*.md.j2"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
